# learn-c-programming

./: CMakeLists.txt  test_quadratic_equation.c
.github/workflows/: c-cpp.yml  ctest.yml  gtest.yml
scr/: math_operations.cpp
src/: CMakeList.txt  CMakeLists.txt  math_operations.cpp  run_main.cpp  run_math.cpp
src/my_lib/: CMakeLists.txt
test/: CMakeLists.cpp  test_math_operations.cpp
tests/: CMakeLists.txt  gtest_main.cpp  main.cpp  test_math_operations.cpp
tests/my_lib/: MyLib_AllTests.cmake  test_math_operations.cpp  test_math_operations.h
